# code

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CPackOptions.cmake.in  ChangeLog  Docker.ubuntu  INSTALL  INSTALL.rst  Makefile  Makefile.am  Makefile.in  NEWS  NXUmodule.f90  NXbrowse.c  NXbrowse.f90  NXdump.f90  NXmodule.f90  NXtest.f90  NXtoDTD.c  NXtoXML.c  README  README.FORTRAN  README.FORTRAN90  README.MinGW  README.WIN32  README.cygwin  README.developers  README.md  README.rpm  README.rst  ReleaseNotes  SConstruct  TODO  acinclude.m4  aclocal.m4  autogen.sh  autoversion.sh  build_rpm  build_rpm.in  (+43 more)
4.2/doc/: Makefile.am
4.2/doc/api/: README
4.2/doc/doxygen/: Doxyfile_c  Doxyfile_java  Makefile.am
4.2/doc/nxdict/: Makefile.am
4.2/doc/tech_ref/: NeXus_definitions.docbook  base_classes.docbook  methods.docbook  terminology.docbook  tofdgs.docbook  tofnpd.docbook
4.2/include/: Makefile.am  napi4.h  nxconfig_vms.h
applications/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NXbrowse.c  NXbrowse90.f90  NXtoNX4.c  NXtoNX5.c  NXtoXML.c  SConscript  napi_test.c  nxconvert.c  nxconvert_common.c  nxdiff  nxdiff.1  nxvalidate.c
applications/NXbrowse/: CMakeLists.txt  Makefile.am  NXbrowse.c  NXbrowse90.f90  make_vms.com
applications/NXconvert/: CMakeLists.txt  Makefile.am  nxconvert.1  nxconvert.cpp  nxconvert_common.cpp  nxconvert_common.h
applications/NXconvertpy/: build.xml  nbbuild.xml  xslt2lib.py
applications/NXconvertpy/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
applications/NXdir/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  data.cpp  data_writer.cpp  main.cpp  nxdir.1  nxdir.h  nxdir_help.h  string_util.cpp  tree.cpp
applications/NXdump/: CMakeLists.txt  Makefile.am
applications/NXsummary/: CMakeLists.txt  Makefile.am  data_util.cpp  main.cpp  nxsummary.hpp  output.cpp  preferences.cpp  preferences.hpp  string_util.cpp  string_util.hpp
applications/NXtranslate/: CMakeLists.txt  Makefile  Makefile.am  attr.cpp  attr.h  dynamic_retriever.cpp  dynamic_retriever.h  ipns_retriever.cpp  ipns_retriever.h  main.cpp  nexus_retriever.cpp  nexus_util.cpp  nexus_util.h  node.cpp  node.h  node_util.cpp  node_util.h  nxtranslate_debug.h  retriever.cpp  retriever.h  string_util.cpp  string_util.h  test_SNS_nexus.xml  test_dynamic.c  test_ipns.xml  test_nexus.xml  test_nexus_macro.xml  test_opengenie.xml  test_simple.xml  test_text_xml.xml  tree.hh  xml_parser.cpp  xml_parser.h  xml_util.cpp
applications/NXtranslate/FRM2/: CMakeLists.txt  Makefile.am  frm2_retriever.cpp  frm2_retriever.h  string_util_ext.cpp  string_util_ext.h
applications/NXtranslate/IPNS_CPP/: CMakeLists.txt  DetectorMap.cpp  Header.cpp  LpsdDetIdMap.cpp  Makefile  Makefile.am  Makefile.nxtranslate  RandomAccessRunfile.cpp  RandomAccessRunfile.h  Runfile.cpp  Runfile.h  TimeField.cpp  TimeField.h  ipns_retriever.cpp  ipns_retriever.h  testProg.cpp  testProg2.cpp
applications/NXtranslate/binary/: BinaryRetriever.cpp  CMakeLists.txt
applications/NXtraverse/: CMakeLists.txt  Makefile.am  main.cpp  nxtraverse.cpp  nxtraverse.h
applications/NXvalidate/: CMakeLists.txt  Makefile.am  README  build.xml  config.h  install.xml  nxvalidate.1  nxvalidate.bat.in  nxvalidate.cpp  nxvalidate.in
applications/nxingest/: CMakeLists.txt  Makefile  Makefile.am  nxingest.txt  nxingest_main.cpp  nxingest_nexus.h  nxingest_parse.cpp  nxingest_utils.cpp
bindings/: CMakeLists.txt  Makefile.am  Makefile.in
bindings/cpp/: CMakeLists.txt  Makefile.am  NeXusException.cpp  NeXusException.hpp  NeXusFile.cpp  NeXusFile.hpp  NeXusFile_old.cpp  NeXusStream.cpp  NeXusStream.hpp  SConscript  nexus_util.cpp  nexus_util.hpp
bindings/f77/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  napif.f  napif.inc  napif.inc.in  napif_test.f
bindings/f90/: CMakeLists.txt  Makefile.am  Makefile.in  NXUmodule.f90  NXmodule.f90
bindings/idl/: Makefile  Makefile.am  NXtest.h5  NXtest.hdf  NXtest.xml  NeXusIDL-API.c  NeXusIDL-API.dlm  handle.c  nxext.h5  nxext.hdf  nxext.xml  read_test.pro  recursiveread.pro  recursivesearch.pro  testidlnapi  write_test.pro
bindings/java/: CMakeLists.txt  Make.alpha  Make.win32  Makefile  Makefile.am  README.JNEXUS  ignore-index.html  index.html  japinotes.html  jnexustut.html
bindings/matlab/: Makefile.am
bindings/python/: CMakeLists.txt  Makefile.am  README.html  __init__.py  nexus.py  nxs.py  nxstest.py  nxsunit.py  pythondoc.cmake  run_nxstest  setup.py
bindings/swig/: CMakeLists.txt  Makefile  Makefile.am  asciidblib.scm  makefile  nxdataset.c  nxdataset.h  nxdataset.i  nxinter.i  nxinterhelper.c  nxinterhelper.h  nxpython.py  nxpython_test.py
doc/: CMakeLists.txt  Makefile.am  README
doc/api/: CMakeLists.txt  Makefile.am  NeXusIntern.html  NeXusIntern.radi  NeXusIntern.tex  napi.tex
doc/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile_c  Doxyfile_cpp  Doxyfile_f77  Doxyfile_f90  Doxyfile_java  Doxyfile_python  Makefile.am
doc/nxdict/: CMakeLists.txt  NXdict.tex
doc/tech_ref/: CMakeLists.txt  Makefile  Makefile.am  NeXus_definitions.docbook  base_classes.docbook  methods.docbook  monoref.docbook  monotas.docbook  tofnpd.docbook  tofnref.docbook
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NeXus.def  SConscript  make_vms.com  makefile_f90  makefile_hdf4  makefile_hdf45  makefile_hdf5  makefile_options  napi.c  napi4.c  napi5.c  napi_exports.c  napi_exports.h  napi_exports2.c  napi_fortran_helper.c  napiu.c  nexus_symbols.txt  nexus_symbols_win.txt  nxdataset.c  nxdataset.h  nxio.c  nxio.h  nxstack.c  nxstack.h  nxxml.c  stptok.c
src/nxdict/: dict.c  dynstring.c  lld.h  nxdict.c  nxdict.w  stringdict.c  test.dict
test/: CMakeLists.txt  Makefile.am  Makefile.in  NXtest.f90  README  atlocal.in  issue_364.c  leak_test1.c  leak_test2.cxx  leak_test3.cxx  napi4_test.c  napi5_test.c  napi_attra_test.c  napi_test.c  napi_test_cpp.cxx  napif4_test.f  napif5_test.f  napif_test.f  run_leak_test  test_nxunlimited.c  testsuite.at
test/data/: dmc01.h5  dmc01.hdf  dmc02.h5  dmc02.hdf
(+1155 files in other folders)
